--- a/package.json
+++ b/package.json
@@ -10,6 +10,7 @@
   },
   "dependencies": {
     "@mdi/font": "7.4.47",
+    "emoji-picker-element": "^1.26.1",
     "roboto-fontface": "*",
     "vue": "^3.4.31",
     "vue-router": "^4.5.0",
